Fix spacing between links and p tags

--- a/src/static/css/LandingPage.css
+++ b/src/static/css/LandingPage.css
@@ -37,6 +37,7 @@
     font-weight: bold;
     cursor: pointer;
     text-decoration: none !important;
+    margin: 0 0.25em;
 }
 
 
